--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 0;
     }
 
-    /* Media query untuk tampilan mobile */
+    /* Media query for mobile */
     @media (max-width: 760px) {
       .pricing-container {
         flex-direction: column;
@@ -28,7 +28,6 @@
       }
     }
 
-    /* CSS untuk tampilan desktop */
     .pricing-plan {
       background-color: #0F3D3E;
       border-radius: 10px;
